[package]
name = "ring-buffers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand = "0.9.1"
core_affinity = "0.8.3"
minstant = "0.1.7"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
debug = true